# lerobot_robot_so101_mujoco

./: .gitignore  .python-version  README.md  pyproject.toml  requirements.txt
lerobot_robot_so101_mujoco/: __init__.py  config_so101_mujoco_robot.py  so101_mujoco_robot.py  so101_sim.py
lerobot_robot_so101_mujoco.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
lerobot_robot_so101_mujoco/robotstudio_so101/: so101.xml  so101_camera_mount.xml
lerobot_robot_so101_mujoco/robotstudio_so101/assets/: ArduCam_M12Lens.stl
